--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Pagina en GitHub</title>
 </head>
 <body>
 	<h1>Hola</h1>
-	<p>kks</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione delectus quasi reiciendis at libero, architecto tempora, minus illo. Culpa explicabo, voluptatem, cumque porro nobis distinctio nam error temporibus consequatur cupiditate?</p>
 </body>
 </html>
