--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Pagina en GitHub</title>
+	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
 	<h1>Hola</h1>
