--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<title>Pagina en GitHub</title>
-	<link rel="stylesheet" href="css/estilo.css">
-</head>
-<body>
-	<h1>Hola</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione delectus quasi reiciendis at libero, architecto tempora, minus illo. Culpa explicabo, voluptatem, cumque porro nobis distinctio nam error temporibus consequatur cupiditate?</p>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Pagina en GitHub</title>
+		<link rel="stylesheet" href="css/estilo.css" />
+	</head>
+	<body>
+		<h1>Hola</h1>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione delectus
+			quasi reiciendis at libero, architecto tempora, minus illo. Culpa
+			explicabo, voluptatem, cumque porro nobis distinctio nam error temporibus
+			consequatur cupiditate?
+		</p>
+		<p>
+			Lorem ipsum dolor sit, amet consectetur adipisicing elit. In voluptatem
+			aspernatur, doloribus atque numquam corrupti dolorum modi molestias
+			consectetur quam?
+		</p>
+	</body>
 </html>
