--- a/index.html
+++ b/index.html
@@ -6,17 +6,45 @@
 		<link rel="stylesheet" href="css/estilo.css" />
 	</head>
 	<body>
-		<h1>Hola</h1>
+		<!-- encabezado -->
+		<h1>Mi primer pagina web</h1>
+
+		<!-- menu -->
+		<ul>
+			<li><a href="index.html">Inicio</a></li>
+			<li><a href="contenido.html">Contenido</a></li>
+			<li><a href="contacto.html">Contacto</a></li>
+			<li><a href="https://www.instagram.com/vidalordonez_">Instagram</a></li>
+		</ul>
+
+		<!-- contenido de index -->
+		<h2>Acerca</h2>
+		<img src="img/img-1.jpg" alt="imagen de inicio" width="500px" />
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione delectus
-			quasi reiciendis at libero, architecto tempora, minus illo. Culpa
-			explicabo, voluptatem, cumque porro nobis distinctio nam error temporibus
-			consequatur cupiditate?
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem
+			sapiente reprehenderit nam quia perferendis saepe, molestias rerum
+			laboriosam veniam alias fugit sed beatae ipsam doloribus facilis error?
+			Soluta voluptas laboriosam, blanditiis fuga maxime dicta possimus rerum
+			adipisci officia, repellat harum earum quod deleniti magni odio voluptates
+			asperiores optio iusto. Repellat, quas. Fuga, dignissimos voluptate sed
+			dicta repellendus perferendis sequi nesciunt veritatis inventore quidem ad
+			illum cum quaerat enim repellat aperiam, dolor qui. Voluptatum delectus
+			maiores modi earum labore aut obcaecati, deleniti aperiam sit, cum ratione
+			nulla quod? Nemo, atque vel doloremque iusto veniam amet repellendus
+			maxime laudantium hic quaerat alias.
 		</p>
 		<p>
-			Lorem ipsum dolor sit, amet consectetur adipisicing elit. In voluptatem
-			aspernatur, doloribus atque numquam corrupti dolorum modi molestias
-			consectetur quam?
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo accusamus
+			dolore est iusto at tenetur perferendis ducimus fugit pariatur, asperiores
+			incidunt omnis eveniet veniam deleniti ullam nemo quaerat temporibus.
+			Expedita officiis ipsum pariatur, eligendi nihil fuga sit fugit
+			dignissimos harum maiores aperiam. Voluptatem nihil, quo maxime deleniti
+			inventore corrupti eaque cum laudantium eius quidem aliquam! Laboriosam
+			animi soluta eaque debitis reiciendis qui! Ex nobis hic tempora quas sed
+			repellat totam error incidunt, eveniet debitis atque accusantium pariatur
+			animi sint tenetur ipsum deleniti corrupti similique? Laudantium
+			blanditiis ipsam voluptatem nobis quidem, saepe perferendis harum
+			praesentium nulla cumque ipsa, similique dolorem. Eaque!
 		</p>
 	</body>
 </html>
