--- a/index.html
+++ b/index.html
@@ -2,49 +2,46 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Pagina en GitHub</title>
+		<title>Vidal Ordoñez | Home Page</title>
 		<link rel="stylesheet" href="css/estilo.css" />
 	</head>
 	<body>
 		<!-- encabezado -->
-		<h1>Mi primer pagina web</h1>
+		<nav class="menu">
+			<ul class="ul"><!-- menu -->
+				<li><img src="./img/computer.svg" alt="logo computer"></li>
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="contenido.html">Proyectos</a></li>
+				<li><a href="contacto.html">Redes Sociales</a></li>
+				<!-- <li><a href="https://www.instagram.com/vidalordonez_">Instagram</a></li>-->
+			</ul>
+		</nav>
+		<header>
+			<section class="header">
+				<div class="container">
+						<h1>Vidal Ordoñez</h1>
+						<p>Desarrollador Desktop y Web</p>
+				</div>
+			</section>
+		</header>
 
-		<!-- menu -->
-		<ul>
-			<li><a href="index.html">Inicio</a></li>
-			<li><a href="contenido.html">Contenido</a></li>
-			<li><a href="contacto.html">Contacto</a></li>
-			<li><a href="https://www.instagram.com/vidalordonez_">Instagram</a></li>
-		</ul>
+		<section class="sobreMi">
+			<div class="container">
+				<h2 class="subtitulo">Sobre Mi</h2>
+				<img src="../img/Me.jpg" alt="Vidal Ordoñez">
+				<p>Como recién graduado, me encantaría poder entrar a formar parte de una empresa en la que poder aplicar todos mis conocimientos y, al mismo tiempo, que me permita desarrollarme profesionalmente.</p>
 
-		<!-- contenido de index -->
-		<h2>Acerca</h2>
-		<img src="img/img-1.jpg" alt="imagen de inicio" width="500px" />
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem
-			sapiente reprehenderit nam quia perferendis saepe, molestias rerum
-			laboriosam veniam alias fugit sed beatae ipsam doloribus facilis error?
-			Soluta voluptas laboriosam, blanditiis fuga maxime dicta possimus rerum
-			adipisci officia, repellat harum earum quod deleniti magni odio voluptates
-			asperiores optio iusto. Repellat, quas. Fuga, dignissimos voluptate sed
-			dicta repellendus perferendis sequi nesciunt veritatis inventore quidem ad
-			illum cum quaerat enim repellat aperiam, dolor qui. Voluptatum delectus
-			maiores modi earum labore aut obcaecati, deleniti aperiam sit, cum ratione
-			nulla quod? Nemo, atque vel doloremque iusto veniam amet repellendus
-			maxime laudantium hic quaerat alias.
-		</p>
-		<p>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo accusamus
-			dolore est iusto at tenetur perferendis ducimus fugit pariatur, asperiores
-			incidunt omnis eveniet veniam deleniti ullam nemo quaerat temporibus.
-			Expedita officiis ipsum pariatur, eligendi nihil fuga sit fugit
-			dignissimos harum maiores aperiam. Voluptatem nihil, quo maxime deleniti
-			inventore corrupti eaque cum laudantium eius quidem aliquam! Laboriosam
-			animi soluta eaque debitis reiciendis qui! Ex nobis hic tempora quas sed
-			repellat totam error incidunt, eveniet debitis atque accusantium pariatur
-			animi sint tenetur ipsum deleniti corrupti similique? Laudantium
-			blanditiis ipsam voluptatem nobis quidem, saepe perferendis harum
-			praesentium nulla cumque ipsa, similique dolorem. Eaque!
-		</p>
+				<p>Gracias a mi formación especializada, considero que puedo aportar valor y seguir desarrollándome profesionalmente en una compañía que coincida con mis valores y expectativas.</p>
+
+				<p>Como persona organizada y con una gran motivación, soy capaz de adaptarme a cualquier circunstancia y dar siempre lo mejor de mí en cualquier proyecto, al mismo tiempo que me esfuerzo por trabajar en equipo y fomentar valores como los del compañerismo.</p>
+			</div>
+		</section>
+
+
+	<footer class="footer">
+				<div class="container">
+					<p>Derechos Reservados <span>Jose Vidal Ordoñez</span></p>
+				</div>
+	</footer>
 	</body>
 </html>
