--- a/contacto.html
+++ b/contacto.html
@@ -4,39 +4,28 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Contacto</title>
+		<title>Redes Sociales</title>
+		<link rel="stylesheet" href="css/estilo.css" />
 	</head>
 	<body>
-		<!-- encabezado -->
-		<h1>Mi primer pagina web</h1>
+		<nav class="menu">
+			<ul class="ul"><!-- menu -->
+				<li><img src="./img/computer.svg" alt="logo computer"></li>
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="contenido.html">Proyectos</a></li>
+				<li><a href="contacto.html">Redes Sociales</a></li>
+				<!-- <li><a href="https://www.instagram.com/vidalordonez_">Instagram</a></li>-->
+			</ul>
+		</nav>
 
-		<!-- menu -->
-		<ul>
-			<li><a href="index.html">Inicio</a></li>
-			<li><a href="contenido.html">Contenido</a></li>
-			<li><a href="contacto.html">Contacto</a></li>
-			<li><a href="https://www.instagram.com/vidalordonez_">Instagram</a></li>
-		</ul>
-
-		<!-- contenido de index -->
-		<h2>Contacto</h2>
-		<form action="">
-			<label for="nombre">Nombre:</label>
-			<br />
-			<input type="text" name="nombe" id="nombre" />
-			<br />
-			<label for="biografia">Biografia:</label>
-			<br />
-			<textarea name="biografia" id="biografia" cols="30" rows="10"></textarea>
-			<br />
-			<label for="edad">Edad:</label>
-			<select name="edad" id="edad">
-				<option value="18">Menor</option>
-				<option value="19">Mayor</option>
-				<option value="60">Adulto</option>
-			</select>
-			<br />
-			<input type="button" value="Enviar" />
-		</form>
+		<section>
+			<div class="container">
+				<ul>
+					<li><a href="">Facebook</a></li>
+					<li><a href="">Instagram</a></li>
+					<li><a href="">Twitter</a></li>
+				</ul>
+			</div>
+		</section>
 	</body>
 </html>
