--- a/contenido.html
+++ b/contenido.html
@@ -4,35 +4,24 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Contenido</title>
+		<title>Proyectos</title>
+		<link rel="stylesheet" href="css/estilo.css" />
 	</head>
 	<body>
-		<!-- encabezado -->
-		<h1>Mi primer pagina web</h1>
+		<nav class="menu">
+			<ul class="ul"><!-- menu -->
+				<li><img src="./img/computer.svg" alt="logo computer"></li>
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="contenido.html">Proyectos</a></li>
+				<li><a href="contacto.html">Redes Sociales</a></li>
+				<!-- <li><a href="https://www.instagram.com/vidalordonez_">Instagram</a></li>-->
+			</ul>
+		</nav>
 
-		<!-- menu -->
-		<ul>
-			<li><a href="index.html">Inicio</a></li>
-			<li><a href="contenido.html">Contenido</a></li>
-			<li><a href="contacto.html">Contacto</a></li>
-			<li><a href="https://www.instagram.com/vidalordonez_">Instagram</a></li>
-		</ul>
-
-		<!-- contenido de index -->
-		<h2>Contenido de mi sitio web</h2>
-		<table border="1">
-			<tr>
-				<th>Perro</th>
-				<th>Gato</th>
-				<th>Tigre</th>
-				<th>Plantas</th>
-			</tr>
-			<tr>
-				<th><img src="img/perro.jpg" alt="perro" width="100px" /></th>
-				<td><img src="img/gato.jpg" alt="gato" width="100px" /></td>
-				<td><img src="img/tigre.jpg" alt="tigre" width="100px" /></td>
-				<td><img src="img/plantas.jpg" alt="plantas" width="100px" /></td>
-			</tr>
-		</table>
+	<section class="proyectos">
+		<div class="container">
+			<h2>Proyectos Personales</h2>
+		</div>
+	</section>
 	</body>
 </html>
