--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<title>Vidal Ordoñez | Home Page</title>
 		<link rel="stylesheet" href="css/estilo.css" />
+		<link  rel="icon"   href="../img/favicon.png" type="image/png" />
 	</head>
 	<body>
 		<!-- encabezado -->
