--- a/contenido.html
+++ b/contenido.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="icon"   href="../img/favicon.png" type="image/png" />
 		<title>Proyectos</title>
 		<link rel="stylesheet" href="css/estilo.css" />
 	</head>
@@ -21,6 +22,14 @@
 	<section class="proyectos">
 		<div class="container">
 			<h2>Proyectos Personales</h2>
+			<div class="wrapper">
+			  <div class="box a">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam animi voluptatibus ullam laboriosam labore atque. Doloribus ratione, debitis voluptas sit.</div>
+			  <div class="box b">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias hic possimus nulla modi omnis fugit voluptatem perspiciatis eos. Cumque, sed.</div>
+			  <div class="box c">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias hic possimus nulla modi omnis fugit voluptatem perspiciatis eos. Cumque, sed.</div>
+			  <div class="box d">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias hic possimus nulla modi omnis fugit voluptatem perspiciatis eos. Cumque, sed.</div>
+			  <div class="box e">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias hic possimus nulla modi omnis fugit voluptatem perspiciatis eos. Cumque, sed.</div>
+			  <div class="box f">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias hic possimus nulla modi omnis fugit voluptatem perspiciatis eos. Cumque, sed.</div>
+			</div>
 		</div>
 	</section>
 	</body>
