--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- encabezado -->
 		<nav class="menu">
 			<ul class="ul"><!-- menu -->
-				<li><img src="./img/computer.svg" alt="logo computer"></li>
+				<li><img src="img/computer.svg" alt="logo computer"></li>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="contenido.html">Proyectos</a></li>
 				<li><a href="contacto.html">Redes Sociales</a></li>
@@ -29,7 +29,7 @@
 		<section class="sobreMi">
 			<div class="container">
 				<h2 class="subtitulo">Sobre Mi</h2>
-				<img src="../img/Me.jpg" alt="Vidal Ordoñez">
+				<img src="img/Me.jpg" alt="Vidal Ordoñez">
 				<p>Como recién graduado, me encantaría poder entrar a formar parte de una empresa en la que poder aplicar todos mis conocimientos y, al mismo tiempo, que me permita desarrollarme profesionalmente.</p>
 
 				<p>Gracias a mi formación especializada, considero que puedo aportar valor y seguir desarrollándome profesionalmente en una compañía que coincida con mis valores y expectativas.</p>
