--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<link  rel="icon"   href="../img/favicon.png" type="image/png" />
+		<link  rel="icon"   href="img/favicon.png" type="image/png" />
 		<title>Vidal Ordoñez | Home Page</title>
 		<link rel="stylesheet" href="css/estilo.css" />
 	</head>
