--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<link  rel="icon"   href="../img/favicon.png" type="image/png" />
+		<link  rel="icon"   href="img/favicon.png" type="image/png" />
 		<title>Redes Sociales</title>
 		<link rel="stylesheet" href="css/estilo.css" />
 	</head>
