Son nuevos cambios

--- a/index.html
+++ b/index.html
@@ -44,5 +44,7 @@
 					<p>Derechos Reservados <span>Jose Vidal Ordoñez</span></p>
 				</div>
 	</footer>
+
+	<script src="js/codigo.js"></script>
 	</body>
 </html>
