--- a/index.html
+++ b/index.html
@@ -1,50 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<link  rel="icon"   href="img/favicon.png" type="image/png" />
-		<title>Vidal Ordoñez | Home Page</title>
-		<link rel="stylesheet" href="css/estilo.css" />
-	</head>
-	<body>
-		<!-- encabezado -->
-		<nav class="menu">
-			<ul class="ul"><!-- menu -->
-				<li><img src="img/computer.svg" alt="logo computer"></li>
-				<li><a href="index.html">Inicio</a></li>
-				<li><a href="contenido.html">Proyectos</a></li>
-				<li><a href="contacto.html">Redes Sociales</a></li>
-				<!-- <li><a href="https://www.instagram.com/vidalordonez_">Instagram</a></li>-->
-			</ul>
-		</nav>
-		<header>
-			<section class="header">
-				<div class="container">
-						<h1>Vidal Ordoñez</h1>
-						<p>Desarrollador Desktop y Web</p>
-				</div>
-			</section>
-		</header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aprendiendo CSS</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+</head>
+<body>
+   <img src="images/myAvatar.png" alt="Logo" class="logo">
+   <div class="profile-name">Vidal Ordoñez</div>
 
-		<section class="sobreMi">
-			<div class="container">
-				<h2 class="subtitulo">Sobre Mi</h2>
-				<img src="img/Me.jpg" alt="Vidal Ordoñez">
-				<p>Como recién graduado, me encantaría poder entrar a formar parte de una empresa en la que poder aplicar todos mis conocimientos y, al mismo tiempo, que me permita desarrollarme profesionalmente.</p>
+   <div class="links">
+       <div class="links_item">
+           <a href="https://www.youtube.com/channel/UCzsAeNzu1ujJU8UJRjJFJvA" class="links_item-a" target="_blank">Canal de youtube</a>
+       </div>
 
-				<p>Gracias a mi formación especializada, considero que puedo aportar valor y seguir desarrollándome profesionalmente en una compañía que coincida con mis valores y expectativas.</p>
-
-				<p>Como persona organizada y con una gran motivación, soy capaz de adaptarme a cualquier circunstancia y dar siempre lo mejor de mí en cualquier proyecto, al mismo tiempo que me esfuerzo por trabajar en equipo y fomentar valores como los del compañerismo.</p>
-			</div>
-		</section>
-
-
-	<footer class="footer">
-				<div class="container">
-					<p>Derechos Reservados <span>Jose Vidal Ordoñez</span></p>
-				</div>
-	</footer>
-
-	<script src="js/codigo.js"></script>
-	</body>
+       <div class="links_item">
+            <a href="https://www.facebook.com/vidal1293" class="links_item-a" target="_blank">Facebook</a>
+        </div>
+        <div class="links_item">
+            <a href="https://www.instagram.com/vidal__ordonez/?hl=es" class="links_item-a" target="_blank">Instagram</a>
+        </div>
+        <div class="links_item">
+            <a href="https://twitter.com/vidalordonez93" class="links_item-a" target="_blank">Twitter</a>
+        </div>
+   </div>
+   <div class="bottom-text">Trinklee</div>
+</body>
 </html>
