cambiando el title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aprendiendo CSS</title>
+    <title>Home | Vidal Ordoñez</title>
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
@@ -27,6 +27,6 @@
             <a href="https://twitter.com/vidalordonez93" class="links_item-a" target="_blank">Twitter</a>
         </div>
    </div>
-   <div class="bottom-text">Trinklee</div>
+   <div class="bottom-text">Sígueme</div>
 </body>
 </html>
