agregue los iconos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8c861dabd5.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
    <img src="images/myAvatar.png" alt="Logo" class="logo">
@@ -15,16 +17,20 @@
    <div class="links">
        <div class="links_item">
            <a href="https://www.youtube.com/channel/UCzsAeNzu1ujJU8UJRjJFJvA" class="links_item-a" target="_blank">Canal de youtube</a>
+           <i class="fab fa-youtube"></i>
        </div>
 
        <div class="links_item">
             <a href="https://www.facebook.com/vidal1293" class="links_item-a" target="_blank">Facebook</a>
+            <i class="fab fa-facebook"></i>
         </div>
         <div class="links_item">
             <a href="https://www.instagram.com/vidal__ordonez/?hl=es" class="links_item-a" target="_blank">Instagram</a>
+            <i class="fab fa-instagram-square"></i>
         </div>
         <div class="links_item">
             <a href="https://twitter.com/vidalordonez93" class="links_item-a" target="_blank">Twitter</a>
+            <i class="fab fa-twitter"></i>
         </div>
    </div>
    <div class="bottom-text">Sígueme</div>
