modificacion del youtube

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
    <div class="links">
        <div class="links_item">
-           <a href="https://www.youtube.com/channel/UCzsAeNzu1ujJU8UJRjJFJvA" class="links_item-a" target="_blank">Canal de youtube</a>
+           <a href="https://www.youtube.com/channel/UCzsAeNzu1ujJU8UJRjJFJvA" class="links_item-a" target="_blank">YouTube</a>
            <i class="fab fa-youtube"></i>
        </div>
 
