--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <i class="fab fa-facebook"></i>
         </div>
         <div class="links_item">
-            <a href="https://www.instagram.com/vidalordonez93/?hl=es" class="links_item-a" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/youcodeit/" class="links_item-a" target="_blank">Instagram</a>
             <i class="fab fa-instagram-square"></i>
         </div>
         <div class="links_item">
