--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-   <img src="images/myAvatar.png" alt="Logo" class="logo">
+   <img src="images/avatar_2.png" alt="Logo" class="logo">
    <div class="profile-name">Vidal Ordoñez</div>
 
    <div class="links">
