--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
    <div class="links">
        <div class="links_item">
-           <a href="https://www.youtube.com/channel/UC8hg1hgBjPkgqOMvpS10uzQ" class="links_item-a" target="_blank">YouTube</a>
+           <a href="https://www.linkedin.com/in/vidalordonezhn/" class="links_item-a" target="_blank">Linkedin</a>
            <i class="fab fa-youtube"></i>
        </div>
 
