cambio de icono

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    <div class="links">
        <div class="links_item">
            <a href="https://www.linkedin.com/in/vidalordonezhn/" class="links_item-a" target="_blank">Linkedin</a>
-           <i class="fab fa-youtube"></i>
+           <i class="fab fa-linkedin"></i>
        </div>
 
        <div class="links_item">
